--- a/INSTALL
+++ b/INSTALL
@@ -1,11 +1,11 @@
-Works with the Go weekly as of Apr 14 2011 (changeset 8101:6aa7ab6b6a9d). To get this version:
-cd $GOROOT && hg pull && hg update 8101
+#Works with the Go weekly as of release.r60
+cd $GOROOT && hg pull -u release.r60
 
-To install gproc:
+# To install gproc:
 
 goinstall bitbucket.org/floren/filemarshal
 goinstall bitbucket.org/floren/ldd
-cd $GOROOT/src/cmd && 
+# you can do this anywhere
 hg clone http://bitbucket.org/floren/gproc &&
 cd gproc &&
 make
