--- a/README
+++ b/README
@@ -84,6 +84,30 @@ Run your command:
 
 When you're done, Ctrl-C the master process; all the slaves should then automatically exit.
 
+** Sample Use Case **
+
+The Megawin project at Sandia is an attempt to boot up to 200 Windows virtual machines on a single Intel i7 node. These virtual machines load from a 700 MB disk image file, which must be copied to each node, along with a 114 MB QEMU "suspend to disk" image which helps boot the virtual machines more quickly. Gproc is used to transfer these files to all 520 KANE nodes and run the script that starts the virtual machines; the commands used are shown here.
+
+First, gproc is started as above:
+
+	sh copytokane.sh 1 520
+	./gproc_linux_amd64 -locale=kane m
+	./startkane -l 1 -h 520 1
+	./startkane -l 1 -h 520 2
+
+Then, the files are copied. The script we use to start the virtual machines expects the files to be in /tmp/ramdisk, so we use gproc to transfer them and copy to the appropriate directory:
+
+	# The -f flag specifies files that should be copied along with the command
+	./gproc_linux_amd64 -f="/scratch/megawin2.img,/scratch/migrate" e ./. /bin/cp /tmp/xproc/scratch/* /tmp/ramdisk
+
+Although there are 520 nodes in the cluster, the 2-level tree means that the front-end node only directly transfers files to every 20th node (26 nodes total). Once the first-level nodes have received their copies of the files, they then copy the files to each of the 19 second-level nodes underneath them.
+
+Once the files have been transferred, it is a simple matter to run the script which starts the virtual machines on every node:
+
+	./gproc_linux_amd64 e ./. /scratch/megawin_kvm_start.sh
+
+The outputs from this script are forwarded back from every individual node to the front-end node for monitoring by the operator.
+
 KF locale (flat network)
 ------------------------
 
